[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameOverHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://assets/fbs-49.png" type="Texture" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/fbs-04.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 290, 10 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
z_index = -100
motion_mirroring = Vector2( 290, 0 )

[node name="Background" type="Sprite" parent="Background/ParallaxLayer"]
position = Vector2( 0, 1 )
texture = ExtResource( 4 )
centered = false

[node name="ObstacleSpawn" type="Position2D" parent="."]
position = Vector2( 350, 0 )

[node name="Foreground" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="Foreground"]
motion_mirroring = Vector2( 336, 0 )

[node name="Sprite" type="Sprite" parent="Foreground/ParallaxLayer"]
position = Vector2( 0, 480 )
texture = ExtResource( 7 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 145, 270 )
z_index = 1
gravity_scale = 10.0

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_bottom = 515

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="Floor" type="StaticBody2D" parent="."]
visible = false
position = Vector2( 145, 490 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 1 )

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameOverHUD" parent="." instance=ExtResource( 2 )]
[connection signal="die" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="play"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
[connection signal="new_game" from="GameOverHUD" to="." method="_on_GameOverHUD_new_game"]
